# software-engineering-flask-app

./: .env  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: c4f1a56a750a_initial.py
app/: __init__.py  config.py  main.py  models.py  routes.py  schemas.py
app/tests/: test_routes.py
