[project]
name = "flask-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.0.0,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg2-binary (>=2.9.9,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "pydantic (>=2.10.1,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-flask (>=1.3.0,<2.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "black (>=25.1.0,<26.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
